--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "lint": "eslint . --fix",
+    "prisma:generate": "prisma generate",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
+    "@prisma/client": "6.4.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -52,6 +54,7 @@
     "isbot": "^5.1.17",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
+    "prisma": "^6.4.1",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
