chore: add postinstall

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "lint": "eslint . --fix",
+    "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
