--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "input-otp": "^1.4.2",
     "isbot": "^5.1.17",
     "lucide-react": "^0.477.0",
+    "motion": "^12.4.10",
     "next-themes": "^0.4.4",
     "prisma": "^6.4.1",
     "react": "^19.0.0",
