--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-router/fs-routes": "^7.3.0",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
     "@unocss/reset": "66.1.0-beta.3",
