--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@rainbow-me/rainbowkit": "^2.2.4",
     "@react-router/fs-routes": "^7.3.0",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
+    "@tanstack/react-query": "^5.67.2",
     "@unocss/reset": "66.1.0-beta.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -68,6 +70,8 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "vaul": "^1.1.2",
+    "viem": "^2.23.9",
+    "wagmi": "^2.14.12",
     "zod": "^3.24.2"
   },
   "devDependencies": {
