--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "react-router build",
+    "build": "react-router typegen && react-router build",
     "dev": "react-router dev",
     "lint": "eslint . --fix",
     "postinstall": "prisma generate",
@@ -12,81 +12,82 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.2",
-    "@prisma/client": "6.4.1",
-    "@radix-ui/react-accordion": "^1.2.3",
-    "@radix-ui/react-alert-dialog": "^1.1.6",
-    "@radix-ui/react-aspect-ratio": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-collapsible": "^1.1.3",
-    "@radix-ui/react-context-menu": "^2.2.6",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-hover-card": "^1.1.6",
+    "@hookform/resolvers": "^5.0.1",
+    "@prisma/client": "6.6.0",
+    "@radix-ui/react-accordion": "^1.2.7",
+    "@radix-ui/react-alert-dialog": "^1.1.10",
+    "@radix-ui/react-aspect-ratio": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.6",
+    "@radix-ui/react-checkbox": "^1.2.2",
+    "@radix-ui/react-collapsible": "^1.1.7",
+    "@radix-ui/react-context-menu": "^2.2.10",
+    "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.10",
+    "@radix-ui/react-hover-card": "^1.1.10",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-menubar": "^1.1.6",
-    "@radix-ui/react-navigation-menu": "^1.2.5",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-progress": "^1.1.2",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-scroll-area": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slider": "^1.2.3",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-switch": "^1.1.3",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toggle": "^1.1.2",
-    "@radix-ui/react-toggle-group": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-menubar": "^1.1.10",
+    "@radix-ui/react-navigation-menu": "^1.2.9",
+    "@radix-ui/react-popover": "^1.1.10",
+    "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-radio-group": "^1.3.2",
+    "@radix-ui/react-scroll-area": "^1.2.5",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slider": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.7",
+    "@radix-ui/react-toggle": "^1.1.6",
+    "@radix-ui/react-toggle-group": "^1.1.6",
+    "@radix-ui/react-tooltip": "^1.2.3",
     "@rainbow-me/rainbowkit": "^2.2.4",
-    "@react-router/fs-routes": "^7.3.0",
-    "@react-router/node": "^7.2.0",
-    "@react-router/serve": "^7.2.0",
-    "@tanstack/react-query": "^5.67.2",
-    "@unocss/reset": "66.1.0-beta.3",
+    "@react-router/fs-routes": "^7.5.1",
+    "@react-router/node": "^7.5.1",
+    "@react-router/serve": "^7.5.1",
+    "@tanstack/react-query": "^5.74.4",
+    "@unocss/reset": "66.1.0-beta.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
+    "cmdk": "1.1.1",
     "cobe": "^0.6.3",
     "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.5.2",
-    "framer-motion": "^12.4.10",
+    "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.7.4",
     "input-otp": "^1.4.2",
-    "isbot": "^5.1.17",
-    "lucide-react": "^0.477.0",
-    "motion": "^12.4.10",
-    "next-themes": "^0.4.4",
-    "prisma": "^6.4.1",
-    "react": "^19.0.0",
+    "isbot": "^5.1.26",
+    "lucide-react": "^0.501.0",
+    "motion": "^12.7.4",
+    "next-themes": "^0.4.6",
+    "prisma": "^6.6.0",
+    "react": "^19.1.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
-    "react-router": "^7.2.0",
-    "recharts": "^2.15.1",
-    "sonner": "^2.0.1",
-    "tailwind-merge": "^3.0.2",
+    "react-router": "^7.5.1",
+    "recharts": "^2.15.3",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
+    "valibot": "^1.0.0",
     "vaul": "^1.1.2",
-    "viem": "^2.23.9",
-    "wagmi": "^2.14.12",
-    "zod": "^3.24.2"
+    "viem": "^2.27.2",
+    "wagmi": "^2.14.16"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.2.0",
-    "@types/node": "^20",
-    "@types/react": "^19.0.1",
-    "@types/react-dom": "^19.0.1",
-    "eslint": "^9.21.0",
-    "eslint-config-hyoban": "^3.2.1",
-    "react-router-devtools": "^1.1.0",
-    "typescript": "^5.7.2",
-    "unocss": "66.1.0-beta.3",
-    "unplugin-auto-import": "^19.1.1",
+    "@react-router/dev": "^7.5.1",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "eslint": "^9.25.0",
+    "eslint-config-hyoban": "^4.0.3",
+    "react-router-devtools": "^1.1.10",
+    "typescript": "^5.8.3",
+    "unocss": "66.1.0-beta.12",
+    "unplugin-auto-import": "^19.1.2",
     "unplugin-icons": "^22.1.0",
-    "vite": "^6.2.0",
+    "vite": "^6.3.2",
+    "vite-plugin-checker": "^0.9.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
